# OpenKB

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml.example  pyproject.toml
.claude/projects/-Users-evilkylin-Projects-OpenKnowledgeBase/memory/: MEMORY.md  feedback_model_tooling.md  project_openkb.md  user_profile.md
docs/: pageindex-cloud-tree-bug.md  pageindex-requirements.md
docs/superpowers/plans/: 2026-04-04-openkb-implementation.md
docs/superpowers/specs/: 2026-04-04-open-knowledge-base-design.md
examples/docs/: 数据挖掘在电力系统中的应用.doc  数据挖掘在电力系统中的应用.docx
openkb/: cli.py  config.py  converter.py  images.py  indexer.py  schema.py  state.py  tree_renderer.py
openkb/agent/: chat.py  chat_session.py  compiler.py  linter.py  query.py  tools.py
tests/: conftest.py  test_add_command.py  test_agent_tools.py  test_cli.py  test_compiler.py  test_config.py  test_config_storage_backend.py  test_converter.py  test_db_registry.py  test_images.py  test_indexer.py  test_lint.py  test_lint_cli.py  test_linter.py  test_list_status.py  test_migration.py  test_query.py  test_state.py  test_tree_renderer.py  test_watcher.py
